add index when listing questions

--- a/app/views/survey_tungs/_answer_fields.html.erb
+++ b/app/views/survey_tungs/_answer_fields.html.erb
@@ -1,5 +1,5 @@
-<p class="fields">  
+<li><p class="fields">
   <%= f.label :content, "Answer" %>  
   <%= f.text_field :content %>  
   <%= link_to_remove_fields "remove", f %>  
-</p>
+</p>            </li>
