--- a/app/views/survey_tungs/_question_tung_fields.html.erb
+++ b/app/views/survey_tungs/_question_tung_fields.html.erb
@@ -1,11 +1,13 @@
-<div class="fields">  
+<li>
+<div class="fields">
   <p>  
-    <%= f.label :content, "Question" %>  
+    <%= f.label :content, "Question #{@index}" %>
     <%= link_to_remove_fields "remove", f %><br />  
     <%= f.text_area :content, :rows => 3 %><br />
   </p>  
-  <% f.fields_for :answers do |builder| %>  
+  <ol><% f.fields_for :answers do |builder| %>
     <%= render 'answer_fields', :f => builder %>  
-  <% end %>  
+  <% end %></ol>
   <p><%= link_to_add_fields "Add Answer", f, :answers %></p>  
 </div> 
+                    </li>
