change root,add layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Survey</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults, :cache => true %> 
-  <%= csrf_meta_tag %>
-</head>
-<body>
+  <head>
+    <title><%= title %></title>
+    <%= csrf_meta_tag %>
+    <%= render 'layouts/stylesheets' %>
+  </head>
+  <body>
+    <div class="container">
+	<div class="span-24">
+  		<%= render 'layouts/header' %>	
+  	</div>
 
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+	<section class="round span-23">	   
+	
+	<p class="notice"><%= notice %></p>
+	<p class="alert"><%= alert %></p>    
+	<%= yield %>                		
+	</section>
 
-<%= yield %>
-
-</body>
+  	<div class="span-24">
+  		<%= render 'layouts/footer' %>
+  	</div>				
+        
+        
+    </div>
+  </body>
 </html>
+
