--- a/app/views/survey_tungs/index.html.erb
+++ b/app/views/survey_tungs/index.html.erb
@@ -1,5 +1,23 @@
 <div class="span-23">
-	<h1>Listing survey_tungs</h1>
+</div>
+<div class="span-17 border">
+  <img src="/images/home_banner.png">
+</div>
+<div class="span-6 last">
+  <h3><strong> Login </strong></h3>
+  <form id="login_form" method="post">
+	  <input type="text" name="username" value="username" size="28px">
+	  <input type="text" name="password" value="password" size="28px"><br>
+	  <input type="checkbox" name="remember_me"> Remember me <br>
+	  <input type="submit" name="login_button" value="Sign in">
+          <a href="#"> Forget password? </a><br><br>
+          <p>Don't have account? <a href="#">Sign Up</a></p>
+  </form>
+</div>
+
+
+<div class="span-12 border">
+	<h1>Newest surveys</h1>
 	<table>
 	  <tr>
 	    <th>Title</th>
@@ -25,6 +43,10 @@
 	<%= link_to 'New Survey tung', new_survey_tung_path %>
 
 </div>
+<div class="span-11 last">
+	<h1> Most viewed surveys</h1>
+</div>
+
 
 
 
