--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,9 @@
   <nav class="round">
     <ul>
       <li><%= link_to "Contact", '#' %></li>
-      <li><%= link_to "Security principle", '#' %></li>     
+      <li><%= link_to "FAQ", '#' %></li>
+      <li><%= link_to "Security Principle", '#' %></li>     
     </ul>
+    Copyright 2011 : TH Team
   </nav>
 </footer>
