--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -104,7 +104,7 @@ nav ul li a:hover {
 
 /* Footer */
 footer {
-  text-align: right;
+  text-align: center;
   margin-top: 10px;
   width: 950px;
   margin-left: auto;
