--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <header>
-  <%= image_tag("logo.png", :alt => "Survey website", :class => "round") %>
+  <% @logo = image_tag("logo.png", :alt => "Survey website", :class => "round") %>
+  <%= link_to @logo, '#' %>
   <nav class="round">
     <ul>
       <li><%= link_to "Home", '/' %></li>
