--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   		<%= render 'layouts/header' %>	
   	</div>
 	<section class="round span-23">	   		    
-	<%= yield %>                		
+	<%= yield %>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>                		
 	</section>
 
   	<div class="span-24">
