--- a/app/views/survey_tungs/_question_tung_fields.html.erb
+++ b/app/views/survey_tungs/_question_tung_fields.html.erb
@@ -1,4 +1,3 @@
-<% javascript 'dynamic_answers' %>
 <li>
 <div class="fields">
   <p>  
@@ -6,8 +5,7 @@
     <%= link_to_remove_fields "remove", f %><br />  
     <%= f.text_area :content, :rows => 3 %><br />
     <%= f.label :type, "Question type:" %>
-    <%= select("question_tung", "type",{"Text" => "text", "Checkbox" => "checkbox", "Radio" => "radio", "Dropdown" => "dropdown"},
-:onchange => link_to_add_fields('', f, :answers))%>
+    <%= select("question_tung", "type",{"Text" => "text", "Checkbox" => "checkbox", "Radio" => "radio", "Dropdown" => "dropdown"})%>
   </p>  
   <ol><% f.fields_for :answers do |builder| %>
     <%= render 'answer_fields', :f => builder %>  
