--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title><%= title %></title>
+    <%= stylesheet_link_tag :all %>
+    <%= javascript_include_tag :defaults, :cache => true %>
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
   </head>
