--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title><%= title %></title>
     <%= stylesheet_link_tag :all %>
-    <%= javascript_include_tag :defaults, :cache => true %>
+    <%= javascript_include_tag :defaults%>
     <%= csrf_meta_tag %>
     <%= render 'layouts/stylesheets' %>
   </head>
