--- a/app/views/survey_tungs/show.html.erb
+++ b/app/views/survey_tungs/show.html.erb
@@ -7,7 +7,7 @@
 
 <ol>  
   <% for question in @survey_tung.question_tungs %>  
-  <li><%= h question.content %><br/><%= h question.type %></li>
+  <li><%= h question.content %></li>
   <ul>  
     <% for answer in question.answers %>  
       <li><%= h answer.content %></li>  
