--- a/app/views/survey_tungs/_question_tung_fields.html.erb
+++ b/app/views/survey_tungs/_question_tung_fields.html.erb
@@ -1,15 +1,18 @@
+<% javascript 'dynamic_answers' %>
 <li>
 <div class="fields">
   <p>  
     <%= f.label :content, "Question" %>
     <%= link_to_remove_fields "remove", f %><br />  
     <%= f.text_area :content, :rows => 3 %><br />
-    <%= f.label :question_type, "Question type:" %>
-    <%= f.select :question_type, ["Text","Combobox"], :prompt => "Select" %>
-  </p>  
+    <label for="select_question_type">Type:</label>
+    <%= f.select :question_type, ["Text","Combobox"], :prompt => "Select", :onChange => "typeSelected()"%>
+  </p>
+  <p id="answer_field">
   <ol><% f.fields_for :answers do |builder| %>
     <%= render 'answer_fields', :f => builder %>  
   <% end %></ol>
-  <p><%= link_to_add_fields "Add Answer", f, :answers %></p>  
+  <p><%= link_to_add_fields "Add Answer", f, :answers %></p>
+  </p>
 </div> 
-                    </li>
+</li>
