--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
       <li><%= link_to "About", '#' %></li>
       <li><%= link_to "Help", '#' %></li>
       <% if(user_signed_in?) %>
-	Welcome <li> <%= link_to current_user.email, '#' %> </li>
+	Welcome <li> <%= link_to current_user.email, '#' %><%= link_to "(logout)", '#' %> </li>
       <% else %>
         <li> <%= link_to "Sign up","users/sign_up" %> </li>
       <% end %> 
