--- a/app/views/survey_tungs/_question_tung_fields.html.erb
+++ b/app/views/survey_tungs/_question_tung_fields.html.erb
@@ -8,7 +8,7 @@
     <%= f.select :question_type, ["Text","Checkbox", "Radio", "Dropdown"], {:prompt => "Select"},:class => "select", :onchange => 'typeSelected()'%>
 </p>
 
-  <div id="answer_field" style="display: none">
+  <div id="answer_field" style="<%= 'display: none' if f.object.question_type == "Text"%>">
       <ol>
         <% f.fields_for :answers do |builder| %>
             <%= render 'answer_fields', :f => builder %>
