fix sign_up link erro

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
       <% if(user_signed_in?) %>
 	Welcome <li> <%= link_to current_user.email, '#' %><%= link_to "(logout)", '#' %> </li>
       <% else %>
-        <li> <%= link_to "Sign up","users/sign_up" %> </li>
+        <li> <%= link_to "Sign up",new_user_registration_url %> </li>
       <% end %> 
     </ul>
   </nav>
